fix: Update 상품 목록 반환 타입 수정
- .collect(Collectors.toList()) -> .toList() 로 수정하였다.
- Java 16에서 도입된 toList() 메서드는 수정 불가능한 목록을 생성하여 예상치 못한 수정을 줄이고 코드 가독성을 개선하는 데 도움이 됩니다. Java 16 이상을 사용하는 경우 이 변경 사항은 불변성을 보장하면서 코드를 단순화하는 데 도움이 됩니다.